fix 9/c spacing on logo; work on quickmatch buttons

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -92,7 +92,7 @@ body {
   display: inline-block;;
 }
 
-.logo-header > h1 > em {
+.logo-header > h1 > strong {
   color: darkblue;
 }
 
